--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!doctype html>
 <html lang="de">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>HAZARD — Powered by the Dark Power on Solana</title>
-<meta name="description" content="HAZARD — community-driven dark memecoin on Solana. No promises. No rug. Play responsibly.">
-<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">  <!-- <-- NEU: Font laden -->
-<link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>HAZARD — Powered by the Dark Power on Solana</title>
+  <meta name="description" content="HAZARD — community-driven dark memecoin on Solana. No promises. No rug. Play responsibly.">
+  
+  <!-- Cinzel Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <!-- page wrapper -->
   <div id="page">
-
     <!-- HERO -->
-    <header class="hero" role="banner">
+    <header class="hero">
       <div class="hero-inner container">
-        <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull" />
+        <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull">
         <h1 class="hero-title">HAZARD</h1>
-        <p class="hero-sub">Powered by the Dark Power on Solana 🖤💀</p>
+        <p class="hero-sub">Powered by the Dark Power on Solana</p>
 
-                    <!-- animated contract box -->
+        <!-- CONTRACT BOX -->
         <div class="contract-wrap">
-          <div class="contract-card" aria-live="polite">
+          <div class="contract-card">
             <div class="contract-inner">
-              <div id="contractText" class="contract-text">DEINE CONTRACT ADDRESS HIER EINFÜGEN</div>
+              <div id="contractText" class="contract-text">
+                DEINE CONTRACT ADDRESS HIER EINFÜGEN
+              </div>
               <div class="contract-actions">
                 <button id="copyBtn" class="btn copy">COPY</button>
               </div>
             </div>
-          </div>
-        </div>  
-          </div>
-        </div>
           </div>
         </div>
 
@@ -39,31 +38,33 @@
       </div>
     </header>
 
-    <!-- MAIN CONTENT -->
+    <!-- MAIN -->
     <main class="container">
-      <section id="about" class="panel">
+      <section class="panel">
         <h2>Was ist HAZARD?</h2>
         <p class="lead">
-          HAZARD ist kein gewöhnlicher Coin. Er steht für Risiko, Mysterium und rohen Adrenalinschub. 
-          Keine Roadmaps. Keine falschen Versprechen. Keine Sicherheitsschirme. Nur das Spiel — und die, die mutig genug sind, es zu spielen.
+          HAZARD ist kein gewöhnlicher Coin. Er steht für Risiko, Mysterium und rohen Adrenalinschub.<br>
+          Keine Roadmaps. Keine falschen Versprechen. Keine Sicherheitsschirme.<br>
+          Nur das Spiel — und die, die mutig genug sind, es zu spielen.
         </p>
         <p class="lead">
-          HAZARD ist fair: 100% Community. Jeder entscheidet selbst, wie viel er investiert und wann er aussteigt.
+          HAZARD ist fair: 100% Community. Jeder entscheidet selbst, wie viel er investiert und wann er aussteigt.<br>
           Keine versteckten Team-Wallets. Keine Market-Maker-Tricks. Keine Garantien.
         </p>
         <p class="lead">
-          Wenn du HAZARD kaufst, übernimmst du die Verantwortung für jede Entscheidung. Das Projekt ist transparent — aber es gibt keine Rettung. Nur Risiko.
+          Wenn du HAZARD kaufst, übernimmst du die Verantwortung für jede Entscheidung.<br>
+          Das Projekt ist transparent — aber es gibt keine Rettung. Nur Risiko.
         </p>
-        <p class="community">🖤 <strong>100% community • No rug • No lies</strong></p>
+        <p class="community">100% community • No rug • No lies</p>
       </section>
 
-      <section id="links" class="panel">
+      <section class="panel">
         <h2>Follow & Track</h2>
         <div class="socials">
           <a class="social" href="https://x.com/HAZARD_Solana" target="_blank" rel="noopener">X</a>
           <a class="social" href="https://t.me/hazardcoinofficial" target="_blank" rel="noopener">Telegram</a>
-          <a class="social" href="https://dexscreener.com/solana/YOUR-TOKEN-ADDRESS" target="_blank" rel="noopener">DexScreener</a>  <!-- <-- Beispiel-URL, ersetzen -->
-          <a class="social" href="https://solscan.io/token/YOUR-TOKEN-ADDRESS" target="_blank" rel="noopener">Solscan</a>  <!-- <-- Beispiel-URL, ersetzen -->
+          <a class="social" href="#" target="_blank" rel="noopener">DexScreener</a>
+          <a class="social" href="#" target="_blank" rel="noopener">Solscan</a>
         </div>
       </section>
     </main>
@@ -73,9 +74,8 @@
         <small>© 2025 HAZARD — The Dark Power on Solana. Not financial advice.</small>
       </div>
     </footer>
-
   </div>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
