--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!doctype html>
 <html lang="de">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HAZARD — Powered by the Dark Power on Solana</title>
   <meta name="description" content="HAZARD — community-driven dark memecoin on Solana. No promises. No rug. Play responsibly.">
-  
-  <!-- Cinzel Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+  <!-- page wrapper -->
   <div id="page">
-    <!-- HERO -->
-    <header class="hero">
-      <div class="hero-inner container">
-        <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull">
-        <h1 class="hero-title">HAZARD</h1>
-        <p class="hero-sub">Powered by the Dark Power on Solana</p>
 
-        <!-- CONTRACT BOX -->
+    <!-- HERO -->
+    <header class="hero" role="banner">
+      <div class="hero-inner container">
+        <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull" />
+        <h1 class="hero-title">HAZARD</h1>
+        <p class="hero-sub">Powered by the Dark Power on Solana 🖤💀</p>
+
+        <!-- animated contract box -->
         <div class="contract-wrap">
-          <div class="contract-card">
+          <div class="contract-card" aria-live="polite">
             <div class="contract-inner">
-              <div id="contractText" class="contract-text">
-                DEINE CONTRACT ADDRESS HIER EINFÜGEN
-              </div>
+              <div id="contractText" class="contract-text">DEINE CONTRACT ADDRESS HIER EINFÜGEN</div>
               <div class="contract-actions">
                 <button id="copyBtn" class="btn copy">COPY</button>
               </div>
@@ -38,33 +35,31 @@
       </div>
     </header>
 
-    <!-- MAIN -->
+    <!-- MAIN CONTENT -->
     <main class="container">
-      <section class="panel">
+      <section id="about" class="panel">
         <h2>Was ist HAZARD?</h2>
         <p class="lead">
-          HAZARD ist kein gewöhnlicher Coin. Er steht für Risiko, Mysterium und rohen Adrenalinschub.<br>
-          Keine Roadmaps. Keine falschen Versprechen. Keine Sicherheitsschirme.<br>
-          Nur das Spiel — und die, die mutig genug sind, es zu spielen.
+          HAZARD ist kein gewöhnlicher Coin. Er steht für Risiko, Mysterium und rohen Adrenalinschub. 
+          Keine Roadmaps. Keine falschen Versprechen. Keine Sicherheitsschirme. Nur das Spiel — und die, die mutig genug sind, es zu spielen.
         </p>
         <p class="lead">
-          HAZARD ist fair: 100% Community. Jeder entscheidet selbst, wie viel er investiert und wann er aussteigt.<br>
+          HAZARD ist fair: 100% Community. Jeder entscheidet selbst, wie viel er investiert und wann er aussteigt.
           Keine versteckten Team-Wallets. Keine Market-Maker-Tricks. Keine Garantien.
         </p>
         <p class="lead">
-          Wenn du HAZARD kaufst, übernimmst du die Verantwortung für jede Entscheidung.<br>
-          Das Projekt ist transparent — aber es gibt keine Rettung. Nur Risiko.
+          Wenn du HAZARD kaufst, übernimmst du die Verantwortung für jede Entscheidung. Das Projekt ist transparent — aber es gibt keine Rettung. Nur Risiko.
         </p>
-        <p class="community">100% community • No rug • No lies</p>
+        <p class="community">🖤 <strong>100% community • No rug • No lies</strong></p>
       </section>
 
-      <section class="panel">
+      <section id="links" class="panel">
         <h2>Follow & Track</h2>
         <div class="socials">
           <a class="social" href="https://x.com/HAZARD_Solana" target="_blank" rel="noopener">X</a>
           <a class="social" href="https://t.me/hazardcoinofficial" target="_blank" rel="noopener">Telegram</a>
-          <a class="social" href="#" target="_blank" rel="noopener">DexScreener</a>
-          <a class="social" href="#" target="_blank" rel="noopener">Solscan</a>
+          <a class="social" href="https://dexscreener.com/solana/YOUR-TOKEN-ADDRESS-HERE" target="_blank" rel="noopener">DexScreener</a>
+          <a class="social" href="https://solscan.io/token/YOUR-TOKEN-ADDRESS-HERE" target="_blank" rel="noopener">Solscan</a>
         </div>
       </section>
     </main>
@@ -74,6 +69,7 @@
         <small>© 2025 HAZARD — The Dark Power on Solana. Not financial advice.</small>
       </div>
     </footer>
+
   </div>
 
   <script src="script.js"></script>
