--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>HAZARD — Powered by the Dark Power on Solana</title>
-  <meta name="description" content="HAZARD — community-driven dark memecoin on Solana. No promises. No rug. Play responsibly.">
+  <title>HAZZARD — Powered by the Dark Power on Solana</title>
+  <meta name="description" content="HAZZARD brings back danger, mystery and adrenaline to crypto. No promises. No safety. Just the game.">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -12,61 +12,28 @@
   <!-- page wrapper -->
   <div id="page">
 
-    <!-- HERO -->
+    <!-- HERO (minimal, wie im Screenshot) -->
     <header class="hero" role="banner">
       <div class="hero-inner container">
-        <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull" />
-        <h1 class="hero-title">HAZARD</h1>
-        <p class="hero-sub">Powered by the Dark Power on Solana 🖤💀</p>
+        <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull" />
+        
+        <h1 class="hero-title">HAZZARD</h1>  <!-- Doppeltes Z + Glow -->
+        <p class="hero-sub">Powered by the Dark Power on Solana ♥</p>
 
-        <!-- animated contract box -->
-        <div class="contract-wrap">
-          <div class="contract-card" aria-live="polite">
-            <div class="contract-inner">
-              <div id="contractText" class="contract-text">DEINE CONTRACT ADDRESS HIER EINFÜGEN</div>
-              <div class="contract-actions">
-                <button id="copyBtn" class="btn copy">COPY</button>
-              </div>
-            </div>
-          </div>
+        <!-- Teaser-Text aus Screenshot -->
+        <div class="hero-teaser">
+          <p>💀 HAZZARD brings back danger, mystery and adrenaline to crypto. No promises. No safety. Just the game. Welcome to the endgame.</p>
+          <p>♥ 100% community Enter only if you trust your own decisions.</p>
         </div>
 
         <p class="hero-tagline">COMING SOON</p>
       </div>
     </header>
 
-    <!-- MAIN CONTENT -->
-    <main class="container">
-      <section id="about" class="panel">
-        <h2>Was ist HAZARD?</h2>
-        <p class="lead">
-          HAZARD ist kein gewöhnlicher Coin. Er steht für Risiko, Mysterium und rohen Adrenalinschub. 
-          Keine Roadmaps. Keine falschen Versprechen. Keine Sicherheitsschirme. Nur das Spiel — und die, die mutig genug sind, es zu spielen.
-        </p>
-        <p class="lead">
-          HAZARD ist fair: 100% Community. Jeder entscheidet selbst, wie viel er investiert und wann er aussteigt.
-          Keine versteckten Team-Wallets. Keine Market-Maker-Tricks. Keine Garantien.
-        </p>
-        <p class="lead">
-          Wenn du HAZARD kaufst, übernimmst du die Verantwortung für jede Entscheidung. Das Projekt ist transparent — aber es gibt keine Rettung. Nur Risiko.
-        </p>
-        <p class="community">🖤 <strong>100% community • No rug • No lies</strong></p>
-      </section>
-
-      <section id="links" class="panel">
-        <h2>Follow & Track</h2>
-        <div class="socials">
-          <a class="social" href="https://x.com/HAZARD_Solana" target="_blank" rel="noopener">X</a>
-          <a class="social" href="https://t.me/hazardcoinofficial" target="_blank" rel="noopener">Telegram</a>
-          <a class="social" href="https://dexscreener.com/solana/YOUR-TOKEN-ADDRESS-HERE" target="_blank" rel="noopener">DexScreener</a>
-          <a class="social" href="https://solscan.io/token/YOUR-TOKEN-ADDRESS-HERE" target="_blank" rel="noopener">Solscan</a>
-        </div>
-      </section>
-    </main>
-
+    <!-- Optional: Footer (klein halten, wie im Screenshot unsichtbar) -->
     <footer class="site-footer">
       <div class="container">
-        <small>© 2025 HAZARD — The Dark Power on Solana. Not financial advice.</small>
+        <small>© 2025 HAZZARD — The Dark Power on Solana. Not financial advice.</small>
       </div>
     </footer>
 
