--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
+  <h2 style="color: red;">TEST: Neue Version live!</h2>
   <!-- page wrapper -->
   <div id="page">
 
