--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HAZZARD</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>HAZZARD — Powered by the Dark Power on Solana</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
-  <style>
-    body{margin:0;background:#000;color:#fff;font-family:'Cinzel',serif;display:flex;align-items:center;justify-content:center;min-height:100vh;text-align:center}
-    h1{font-size:15vw;letter-spacing:10px;text-shadow:0 0 30px #b30000,0 0 60px #d4af37;animation:g 3s infinite alternate}
-    @keyframes g{from{text-shadow:0 0 30px #b30000}to{text-shadow:0 0 60px #d4af37,0 0 90px #d4af37}}
-    p{font-size:5vw;margin:20px;color:#d4af37}
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div>
+  <div class="hero">
+    <img src="images/skull_a.png" alt="HAZZARD" class="hero-skull">
     <h1>HAZZARD</h1>
-    <p>COMING SOON</p>
+    <p class="sub">Powered by the Dark Power on Solana</p>
+    <div class="teaser">
+      <p>HAZZARD brings back danger, mystery and adrenaline to crypto.<br>No promises. No safety. Just the game. Welcome to the endgame.</p>
+      <p>100% community — Enter only if you trust your own decisions.</p>
+    </div>
+    <p class="tagline">COMING SOON</p>
   </div>
+  <footer>© 2025 HAZZARD — The Dark Power on Solana. Not financial advice.</footer>
+  <script src="script.js"></script>
 </body>
 </html>
