--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
       <p>100% community — Enter only if you trust your own decisions.</p>
     </div>
     <p class="tagline">COMING SOON</p>
+    <!-- CONTRACT ADDRESS BOX -->
+<div class="ca-box">
+  <div class="ca-warning">Use at your own risk — no recovery</div>
+  <div class="ca-inner">
+    <!-- CONTRACT ADDRESS BOX -->
+<div class="ca-box">
+  <div class="ca-warning">Use at your own risk — no recovery</div>
+  <div class="ca-inner">
+    <div id="caText" class="ca-text">
+    0000000000000000
+    </div>
+    <button id="copyBtn" class="ca-copy">COPY</button>
+  </div>
+</div>
+    </div>
+    <button id="copyBtn" class="ca-copy">COPY</button>
+  </div>
+</div>
   </div>
   <footer>© 2025 HAZZARD — The Dark Power on Solana. Not financial advice.</footer>
   <script src="script.js"></script>
