--- a/index.html
+++ b/index.html
@@ -21,13 +21,8 @@
 <div class="ca-box">
   <div class="ca-warning">Use at your own risk — no recovery</div>
   <div class="ca-inner">
-    <!-- CONTRACT ADDRESS BOX -->
-<div class="ca-box">
-  <div class="ca-warning">Use at your own risk — no recovery</div>
-  <div class="ca-inner">
-    <div id="caText" class="ca-text">
-    0000000000000000
-    </div>
+   
+    </div>r
     <button id="copyBtn" class="ca-copy">COPY</button>
   </div>
 </div>
