--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
       <p>100% community — Enter only if you trust your own decisions.</p>
     </div>
     <p class="tagline">COMING SOON</p>
-    <!-- CONTRACT ADDRESS BOX -->
-<div class="ca-box">
-  <div class="ca-warning">Use at your own risk — no recovery</div>
-  <div class="ca-inner">
+  
    
-    </div>r
+    </div>
     <button id="copyBtn" class="ca-copy">COPY</button>
   </div>
 </div>
