--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="hero">
-    <img src="images/skull_a.png" alt="HAZZARD" class="hero-skull">
+    <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull">
     <h1>HAZZARD</h1>
     <p class="sub">Powered by the Dark Power on Solana</p>
     <div class="teaser">
@@ -17,10 +17,24 @@
       <p>100% community — Enter only if you trust your own decisions.</p>
     </div>
     <p class="tagline">COMING SOON</p>
-  
+
+    <!-- CONTRACT ADDRESS BOX -->
+    <div class="ca-container">
+      <div class="ca-box">
+        <p class="ca-label">Contract Address</p>
+        <div class="ca-address">
+          <span id="caText">0000000000000000000000000000000000000000000000000000000000000000</span>
+          <button id="copyBtn" title="Copy to clipboard">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+              <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
+            </svg>
+          </button>
+        </div>
+        <p class="ca-copied">Copied!</p>
+      </div>
+    </div>
   </div>
-</div>
-  </div>
+
   <footer>© 2025 HAZZARD — The Dark Power on Solana. Not financial advice.</footer>
   <script src="script.js"></script>
 </body>
