--- a/index.html
+++ b/index.html
@@ -13,39 +13,15 @@
     <h1>HAZZARD</h1>
     <p class="sub">Powered by the Dark Power on Solana</p>
 
-    <!-- Teaser-Text als Copy-Box -->
-    <div class="text-container">
-      <div class="text-box">
-        <div class="text-content">
-          HAZZARD brings back danger, mystery and adrenaline to crypto.<br>
-          No promises. No safety. Just the game. Welcome to the endgame.<br><br>
-          100% community — Enter only if you trust your own decisions.
-        </div>
-        <button class="text-copy" title="Copy text">
-          <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
-            <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
-          </svg>
-        </button>
-        <p class="text-copied">Copied!</p>
-      </div>
-    </div>
-
-    <!-- Subtitle als eigene Copy-Box -->
-    <div class="text-container subtitle-box">
-      <div class="text-box">
-        <div class="text-content subtitle">Powered by the Dark Power on Solana</div>
-        <button class="text-copy" title="Copy text">
-          <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
-            <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
-          </svg>
-        </button>
-        <p class="text-copied">Copied!</p>
-      </div>
+    <div class="teaser">
+      <p>HAZZARD brings back danger, mystery and adrenaline to crypto.<br>
+      No promises. No safety. Just the game. Welcome to the endgame.</p>
+      <p>100% community — Enter only if you trust your own decisions.</p>
     </div>
 
     <p class="tagline">COMING SOON</p>
 
-    <!-- Contract Address Box -->
+    <!-- Contract Address (einziger Copy-Button auf der Seite) -->
     <div class="ca-container">
       <div class="ca-box">
         <p class="ca-label">Contract Address</p>
