--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="teaser">
       <p>HAZZARD brings back danger, mystery and adrenaline to crypto.<br>
       No promises. No safety. Just the game. Welcome to the endgame.</p>
-      <p>100% community — Enter only if you trust your own decisions.</p>
+      <p>100% community - Enter only if you trust your own decisions.</p>
     </div>
 
     <p class="tagline">COMING SOON</p>
@@ -26,7 +26,7 @@
       <div class="ca-box">
         <p class="ca-label">Contract Address</p>
         <div class="ca-address">
-          <span id="caText">5241BVJpTDscdFM5bTmeuchBcjXN5sasBywyF7onkJZP</span>
+          <span id="caText">5241BVJpTDscdFM5bTmeuchBcjXN5sasBywyF7onkJZ</span>
           <button id="copyBtn" title="Copy to clipboard">
             <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
               <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
