--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
   <div class="hero">
     <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull">
     <h1>HAZZARD</h1>
-    <p class="sub">Powered by the Dark Power on Solana</p>
 
-    <div class="teaser">
-      <p>HAZZARD brings back danger, mystery and adrenaline to crypto.<br>
-      No promises. No safety. Just the game. Welcome to the endgame.</p>
-      <p>100% community — Enter only if you trust your own decisions.</p>
+    <!-- Subtitle mit goldenem Rahmen (wie CA-Box) -->
+    <div class="text-frame">
+      <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
+    </div>
+
+    <!-- Langer Teaser mit goldenem Rahmen (wie CA-Box) -->
+    <div class="text-frame teaser-frame">
+      <div class="frame-content">
+        HAZZARD brings back danger, mystery and adrenaline to crypto.<br>
+        No promises. No safety. Just the game. Welcome to the endgame.<br><br>
+        100% community — Enter only if you trust your own decisions.
+      </div>
     </div>
 
     <p class="tagline">COMING SOON</p>
 
-    <!-- Contract Address (einziger Copy-Button auf der Seite) -->
+    <!-- Contract Address (original mit Copy-Button) -->
     <div class="ca-container">
       <div class="ca-box">
         <p class="ca-label">Contract Address</p>
