--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull">
     <h1>HAZZARD</h1>
 
-    <!-- Subtitle mit goldenem Rahmen (wie CA-Box) -->
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
 
-    <!-- Langer Teaser mit goldenem Rahmen (wie CA-Box) -->
     <div class="text-frame teaser-frame">
       <div class="frame-content">
         HAZZARD brings back danger, mystery and adrenaline to crypto.<br>
@@ -28,7 +26,7 @@
 
     <p class="tagline">COMING SOON</p>
 
-    <!-- Contract Address (original mit Copy-Button) -->
+    <!-- Contract Address -->
     <div class="ca-container">
       <div class="ca-box">
         <p class="ca-label">Contract Address</p>
@@ -42,6 +40,29 @@
         </div>
         <p class="ca-copied">Copied!</p>
       </div>
+    </div>
+
+    <!-- SOCIAL / EXPLORER LINKS -->
+    <div class="links-container">
+      <a href="https://solscan.io/token/YOUR_CA_HERE" target="_blank" class="link-box">
+        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
+        <span>Solscan</span>
+      </a>
+
+      <a href="https://dexscreener.com/solana/YOUR_CA_HERE" target="_blank" class="link-box">
+        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M3 3h18v18H3z"/></svg>
+        <span>Dexscreener</span>
+      </a>
+
+      <a href="https://x.com/yourhandle" target="_blank" class="link-box">
+        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+        <span>X / Twitter</span>
+      </a>
+
+      <a href="https://t.me/yourchannel" target="_blank" class="link-box">
+        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 9.73l-1.42 6.696c-.104.487-.375.607-.775.378l-2.16-1.59-1.04.998c-.115.112-.21.205-.43.205l.155-2.188 4.004-3.835c.174-.157-.038-.244-.27-.087l-4.946 3.116-1.905-.596c-.414-.129-.424-.413.086-.608l7.904-3.043c.348-.13.654.084.65.533z"/></svg>
+        <span>Telegram</span>
+      </a>
     </div>
   </div>
 
