--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <span>Dexscreener</span>
       </a>
 
-      <a href="https://x.com/yourhandle" target="_blank" class="link-box">
+      <a href="https://x.com/hazard_solana?s=21" target="_blank" class="link-box">
         <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
         <span>X / Twitter</span>
       </a>
 
-      <a href="https://t.me/yourchannel" target="_blank" class="link-box">
+      <a href="https://t.me/hazardcoinofficial" target="_blank" class="link-box">
         <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 9.73l-1.42 6.696c-.104.487-.375.607-.775.378l-2.16-1.59-1.04.998c-.115.112-.21.205-.43.205l.155-2.188 4.004-3.835c.174-.157-.038-.244-.27-.087l-4.946 3.116-1.905-.596c-.414-.129-.424-.413.086-.608l7.904-3.043c.348-.13.654.084.65.533z"/></svg>
         <span>Telegram</span>
       </a>
