--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-        HAZZARD brings back danger, mystery and adrenaline to crypto.<br>
-        No promises. No safety. Just the game. Welcome to the endgame.<br><br>
-        100% community — Enter only if you trust your own decisions.
+       HAZARD is a fair, fully community-driven Solana token — no insiders, no team wallets, no hidden advantages.
+
+There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br>
+        HAZARD stands for risk, freedom, and pure adrenaline.
+If you enter, you accept the rules: total self-responsibility, no protection, no excuses.<br><br>
+        🖤 HAZARD. 100% community. 0% guarantees. Only the game.
       </div>
     </div>
 
