--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-       HAZARD is a fair, fully community-driven Solana token — no insiders, no team wallets, no hidden advantages.
+       HAZARD is a fair, fully community-driven Solana token — no insiders, no team wallets, no hidden advantages. <br>
 
 There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br>
         HAZARD stands for risk, freedom, and pure adrenaline.
