--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-       HAZARD is a fair, fully community-driven Solana token — no insiders, no team wallets, no hidden advantages. <br>
+       HAZARD is a fair, fully community-driven Solana token - no insiders, no team wallets, no hidden advantages. <br>
 
 There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br>
-        HAZARD stands for risk, freedom, and pure adrenaline.
+        HAZARD stands for risk, freedom, and pure adrenaline.<br>
 If you enter, you accept the rules: total self-responsibility, no protection, no excuses.<br><br>
-        🖤 HAZARD. 100% community. 0% guarantees. Only the game.
+        🖤 HAZARD. 100% community.<br> 
+        0% guarantees. Only the game.
       </div>
     </div>
 
@@ -34,7 +35,7 @@ If you enter, you accept the rules: total self-responsibility, no protection, no
       <div class="ca-box">
         <p class="ca-label">Contract Address</p>
         <div class="ca-address">
-          <span id="caText">0000000000000000000000000000000000000000000000000000000000000000</span>
+          <span id="caText">0000000000000000000000000000000000000000000000000</span>
           <button id="copyBtn" title="Copy to clipboard">
             <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
               <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
