--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@ If you enter, you accept the rules: total self-responsibility, no protection, no
     </div>
   </div>
 
-  <footer>© 2025 HAZZARD — The Dark Power on Solana. Not financial advice.</footer>
+  <footer>
+  <span>© 2025 HAZZARD — The Dark Power on Solana. Not financial advice.</span>
+</footer>
   <script src="script.js"></script>
 </body>
 </html>
