--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        HAZARD is a fair, fully community-driven Solana token<br> 
         No insiders, no team wallets, no hidden advantages. <br><br>
 
-There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br>
+There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br><br>
         HAZARD stands for risk, freedom, and pure adrenaline.<br>
 If you enter, you accept the rules: total self-responsibility, no protection, no excuses.<br><br>
         🖤 HAZARD. 100% community.<br> 
