--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-       HAZARD is a fair, fully community-driven Solana token<br> 
+       $HAZARD is a fair, fully community-driven Solana token<br> 
         No insiders, no team wallets, no hidden advantages. <br><br>
 
 There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br><br>
-        HAZARD stands for risk, freedom, and pure adrenaline.<br>
+        $HAZARD stands for risk, freedom, and pure adrenaline.<br>
 If you enter, you accept the rules: total self-responsibility, no protection, no excuses.<br><br>
-        🖤 HAZARD. 100% community.<br> 
+        🖤 $HAZARD. 100% community.<br> 
         0% guarantees. Only the game.
       </div>
     </div>
