--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ If you enter, you accept the rules: total self-responsibility, no protection, no
         <p class="ca-label">Contract Address</p>
         <div class="ca-address">
           <span id="caText">0000000000000000000000000000000000000000000000000</span>
-          <button id="copyBtn" title="Copy to clipboard">
+          <button id="copyBtn" title="Copy Address">
             <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
               <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
             </svg>
