--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="hero">
     <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull">
-    <h1>HAZZARD</h1>
+    <h1>HAZARD</h1>
 
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
@@ -72,7 +72,7 @@ If you enter, you accept the rules: total self-responsibility, no protection, no
   </div>
 
   <footer>
-  <span>© 2025 HAZZARD — The Dark Power on Solana. Not financial advice.</span>
+  <span>© 2025 HAZARD — The Dark Power on Solana. Not financial advice.</span>
 </footer>
   <script src="script.js"></script>
 </body>
