--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ If you enter, you accept the rules: total self-responsibility, no protection, no
       </div>
     </div>
 
-    <p class="tagline">Hazard is available on various crypto platforms.</p>
+    <p class="tagline">Hazard is listed on crypto exchanges.</p>
 
     <!-- Contract Address -->
     <div class="ca-container">
