--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ If you enter, you accept the rules: total self-responsibility, no protection, no
   </div>
 
   <footer>
-  <span>© 2025 HAZARD — The Dark Power on Solana. Not financial advice.</span>
+  <span>The Dark Power on Solana. Not financial advice.</span>
+    <span>© 2025 HAZARD</span>
 </footer>
   <script src="script.js"></script>
 </body>
