--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-       $HAZARD is a fair, fully community-driven Solana token<br> 
+       $HAZARD is a fair, community-based Solana token.<br> 
         No insiders, no team wallets, no hidden advantages. <br><br>
 
 There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br><br>
