--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br><br>
         $HAZARD stands for risk, freedom, and pure adrenaline.<br>
-If you enter, you accept the rules: total self-responsibility, no protection, no excuses.<br><br>
+If you enter, you accept the rules:<br> 
+        Total self-responsibility, no protection, no excuses.<br><br>
         🖤 $HAZARD. 100% community.<br> 
         0% guarantees. Only the game.
       </div>
