--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-       $HAZARD is a fair, community-based Solana token.<br> 
+       $HAZARD is forged in darkness a fair, community-driven Solana token with no insiders.<br> 
         No insiders, no team wallets, no hidden advantages. <br><br>
 
-There are no promises and no safety. You decide how much you invest and when you exit. Gains and losses are entirely your responsibility. <br><br>
-        $HAZARD stands for risk, freedom, and pure adrenaline.<br>
-If you enter, you accept the rules:<br> 
-        Total self-responsibility, no protection, no excuses.<br><br>
+Here, nothing is promised. Nothing is guaranteed. You choose your entry. You choose your exit. Your gains and losses belong only to you.<br><br>
+        $HAZARD stands for risk, freedom, and pure adrenaline the raw edge of crypto where you rely on instinct, not safety nets.<br>
+If you enter, you accept the law of the skull:<br> 
+        Total self-responsibility, No protection, No excuses.<br><br>
         🖤 $HAZARD. 100% community.<br> 
         0% guarantees. Only the game.
       </div>
