--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-       $HAZARD is forged in darkness a fair, community-driven Solana token with no insiders.<br> 
+       $HAZARD is forged in darkness a fair, community-driven Solana token.<br> 
         No insiders, no team wallets, no hidden advantages. <br><br>
 
 Here, nothing is promised. Nothing is guaranteed. You choose your entry. You choose your exit. Your gains and losses belong only to you.<br><br>
