--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         No insiders, no team wallets, no hidden advantages. <br><br>
 
 Here, nothing is promised. Nothing is guaranteed. You choose your entry. You choose your exit. Your gains and losses belong only to you.<br><br>
-        $HAZARD stands for risk, freedom, and pure adrenaline the raw edge of crypto where you rely on instinct, not safety nets.<br>
+        $HAZARD stands for risk, freedom, and pure adrenaline the raw edge of crypto where you rely on instinct.<br>
 If you enter, you accept the law of the skull:<br> 
         Total self-responsibility, No protection, No excuses.<br><br>
         🖤 $HAZARD. 100% community.<br> 
