--- a/index.html
+++ b/index.html
@@ -18,19 +18,31 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-       $HAZARD is forged in darkness a fair, community-driven Solana token.<br> 
+        $HAZARD is forged in darkness a fair, community-driven Solana token.<br>
         No insiders, no team wallets, no hidden advantages. <br><br>
-
-Here, nothing is promised. Nothing is guaranteed. You choose your entry. You choose your exit. Your gains and losses belong only to you.<br><br>
+        Here, nothing is promised. Nothing is guaranteed. You choose your entry. You choose your exit. Your gains and losses belong only to you.<br><br>
         $HAZARD stands for risk, freedom, and pure adrenaline the raw edge of crypto where you rely on instinct.<br>
-If you enter, you accept the law of the skull:<br> 
+        If you enter, you accept the law of the skull:<br>
         Total self-responsibility, No protection, No excuses.<br><br>
-        🖤 $HAZARD. 100% community.<br> 
+        $HAZARD. 100% community.<br>
         0% guarantees. Only the game.
       </div>
     </div>
 
     <p class="tagline">Hazard is listed on crypto exchanges.</p>
+
+    <!-- EXCHANGE LOGO BUTTONS -->
+    <div class="exchange-buttons">
+      <a href="#" class="exchange-btn" target="_blank">
+        <img src="images/Pumpfun.jpg" alt="Pump.fun">
+      </a>
+      <a href="#" class="exchange-btn" target="_blank">
+        <img src="images/Dexscreener.jpg" alt="Dexscreener">
+      </a>
+      <a href="#" class="exchange-btn" target="_blank">
+        <img src="images/Solscan.jpg" alt="Solscan">
+      </a>
+    </div>
 
     <!-- Contract Address -->
     <div class="ca-container">
@@ -48,15 +60,12 @@ If you enter, you accept the law of the skull:<br>
       </div>
     </div>
 
-    <!-- SOCIAL / EXPLORER LINKS -->
+    <!-- SOCIAL LINKS -->
     <div class="links-container">
-      
-
       <a href="https://x.com/hazard_solana?s=21" target="_blank" class="link-box">
         <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
         <span>X / Twitter</span>
       </a>
-
       <a href="https://t.me/hazardcoinofficial" target="_blank" class="link-box">
         <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 9.73l-1.42 6.696c-.104.487-.375.607-.775.378l-2.16-1.59-1.04.998c-.115.112-.21.205-.43.205l.155-2.188 4.004-3.835c.174-.157-.038-.244-.27-.087l-4.946 3.116-1.905-.596c-.414-.129-.424-.413.086-.608l7.904-3.043c.348-.13.654.084.65.533z"/></svg>
         <span>Telegram</span>
@@ -65,8 +74,9 @@ If you enter, you accept the law of the skull:<br>
   </div>
 
   <footer>
-  <span>Not financial advice - © 2025 HAZARD</span>
-</footer>
+    <span>Not financial advice - © 2025 HAZZARD</span>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
