--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-        $HAZARD is forged in darkness a fair, community-driven Solana token.<br>
+        $HAZARD is forged in darkness a fair, community-driven Solana<br> 
+        token.<br>
         No insiders, no team wallets, no hidden advantages. <br><br>
         Here, nothing is promised. Nothing is guaranteed. You choose your entry. You choose your exit. Your gains and losses belong only to you.<br><br>
         $HAZARD stands for risk, freedom, and pure adrenaline the raw edge of crypto where you rely on instinct.<br>
