--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         If you enter, you accept the law of the skull:<br>
         Total self-responsibility, No protection, No excuses.<br><br>
         $HAZARD. 100% community.<br>
-        0% guarantees. Only the game.
+        0% guarantees. Only the game.💀🖤
       </div>
     </div>
 
