--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         $HAZARD stands for risk, freedom, and pure adrenaline the raw edge of crypto where you rely on instinct.<br>
         If you enter, you accept the law of the skull:<br>
         Total self-responsibility, No protection, No excuses.<br><br>
-        $HAZARD. 100% community.<br>
-        0% guarantees. Only the game.<br>
-        💀🖤<br>
+        $HAZARD. 100% community.🖤<br>
+        0% guarantees. Only the game.💀<br>
       </div>
     </div>
 
