--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
 
-    <p class="tagline">Hazard is listed on crypto exchanges.</p>
+    <p class="tagline">Hazard is listed on crypto exchanges</p>
 
     <!-- EXCHANGE LOGO BUTTONS -->
     <div class="exchange-buttons">
