--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>
 
   <footer>
-    <span>Not financial advice - © 2025 HAZZARD</span>
+    <span>Not financial advice - © 2025 HAZARD</span>
   </footer>
 
   <script src="script.js"></script>
