--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
         <p class="ca-copied">Copied!</p>
       </div>
     </div>
-
+    <!-- BUY BUTTON -->
+    <div class="buy-container">
+      <a href="https://jup.ag/swap/SOL-HAZARDCA" target="_blank" class="buy-btn">
+        <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
+          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+        </svg>
+        BUY $HAZARD ON RAYDIUM
+      </a>
+      <p class="buy-info">via Jupiter Aggregator → best price</p>
+    </div>
     <!-- SOCIAL LINKS -->
     <div class="links-container">
       <a href="https://x.com/hazard_solana?s=21" target="_blank" class="link-box">
