--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- LIVE TICKER – immer oben -->
+<div class="ticker-bar">
+  <div class="ticker-item">
+    <span class="label">Price</span>
+    <span class="value" id="price">$0.000000</span>
+  </div>
+  <div class="ticker-item">
+    <span class="label">24h</span>
+    <span class="value" id="change">0.00%</span>
+  </div>
+  <div class="ticker-item">
+    <span class="label">Holders</span>
+    <span class="value" id="holders">0</span>
+  </div>
+  <div class="ticker-item">
+    <span class="label">Volume</span>
+    <span class="value" id="volume">$0</span>
+  </div>
+  <div class="ticker-item">
+    <span class="label">MCap</span>
+    <span class="value" id="mcap">$0</span>
+  </div>
+</div>
   <div class="hero">
     <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull">
     <h1>HAZARD</h1>
