--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <div class="hero">
     <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull">
     <h1>HAZARD</h1>
+    <div class="text-frame">
+      <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
+    </div>
 <!-- LIVE STATS BLOCK -->
 <div class="stats-container">
   <div class="stats-grid">
