--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
-<!-- LIVE STATS BLOCK -->
-<div class="stats-container">
-  <div class="stats-grid">
-    <div class="stat-item">
-      <span class="stat-label">Price</span>
-      <span class="stat-value" id="price">$0.000000</span>
+    <!-- LIVE STATS BLOCK (zentral, geil, funktioniert sofort) -->
+    <div class="stats-container">
+      <div class="stats-grid">
+        <div class="stat-item">
+          <span class="stat-label">Price</span>
+          <span class="stat-value" id="price">$0.000000</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">24h Change</span>
+          <span class="stat-value" id="change">0.00%</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Holders</span>
+          <span class="stat-value" id="holders">soon</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Volume 24h</span>
+          <span class="stat-value" id="volume">$0</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Market Cap</span>
+          <span class="stat-value" id="mcap">$0</span>
+        </div>
+      </div>
     </div>
-    <div class="stat-item">
-      <span class="stat-label">24h Change</span>
-      <span class="stat-value" id="change">0.00%</span>
-    </div>
-    <div class="stat-item">
-      <span class="stat-label">Holders</span>
-      <span class="stat-value" id="holders">0</span>
-    </div>
-    <div class="stat-item">
-      <span class="stat-label">Volume 24h</span>
-      <span class="stat-value" id="volume">$0</span>
-    </div>
-    <div class="stat-item">
-      <span class="stat-label">Market Cap</span>
-      <span class="stat-value" id="mcap">$0</span>
-    </div>
-  </div>
-</div>
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
