--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
-    <!-- LIVE STATS BLOCK (zentral, geil, funktioniert sofort) -->
+    <!-- LIVE TICKER BLOCK – ZENTRAL UNTER DEM SKULL -->
     <div class="stats-container">
       <div class="stats-grid">
         <div class="stat-item">
