--- a/index.html
+++ b/index.html
@@ -54,7 +54,21 @@
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
-
+<!-- Contract Address -->
+    <div class="ca-container">
+      <div class="ca-box">
+        <p class="ca-label">Contract Address</p>
+        <div class="ca-address">
+          <span id="caText">0000000000000000000000000000000000000000000000000</span>
+          <button id="copyBtn" title="Copy Address">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor">
+              <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
+            </svg>
+          </button>
+        </div>
+        <p class="ca-copied">Copied!</p>
+      </div>
+    </div>
     <div class="text-frame teaser-frame">
       <div class="frame-content">
         $HAZARD is forged in darkness a fair, community-driven<br> 
@@ -84,6 +98,17 @@
       </a>
     </div>
 
+    
+    <!-- BUY BUTTON -->
+    <div class="buy-container">
+      <a href="https://jup.ag/swap/SOL-HAZARDCA" target="_blank" class="buy-btn">
+        <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
+          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
+        </svg>
+        BUY $HAZARD ON RAYDIUM
+      </a>
+      <p class="buy-info">via Jupiter Aggregator → best price</p>
+    </div>
     <!-- Contract Address -->
     <div class="ca-container">
       <div class="ca-box">
@@ -98,16 +123,6 @@
         </div>
         <p class="ca-copied">Copied!</p>
       </div>
-    </div>
-    <!-- BUY BUTTON -->
-    <div class="buy-container">
-      <a href="https://jup.ag/swap/SOL-HAZARDCA" target="_blank" class="buy-btn">
-        <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
-          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
-        </svg>
-        BUY $HAZARD ON RAYDIUM
-      </a>
-      <p class="buy-info">via Jupiter Aggregator → best price</p>
     </div>
     <!-- SOCIAL LINKS -->
     <div class="links-container">
