--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <p class="ca-copied">Copied!</p>
       </div>
     </div>
+     <div class="text-frame">
+      <div class="frame-content subtitle">$HAZARD: Where every decision is your own</div>
+    </div>
     <div class="text-frame teaser-frame">
       <div class="frame-content">
         $HAZARD is forged in darkness a fair, community-driven<br> 
