--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
           <span class="stat-label">Price</span>
           <span class="stat-value" id="price">$0.000000</span>
         </div>
-        
+        <div class="stat-item">
+          <span class="stat-label">24h Change</span>
+          <span class="stat-value" id="change">0.00%</span>
+        </div>
         <div class="stat-item">
           <span class="stat-label">Holders</span>
           <span class="stat-value" id="holders">soon</span>
