--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
     <!-- MAIN TEXT – hart, aber fair -->
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-        $HAZARD is forged in darkness — a 100% fair-launched Solana memecoin.<br>
+        $HAZARD is forged in darkness - a 100% fair-launched Solana memecoin.<br>
         No presale. No team tokens. No insiders. Liquidity burned at launch.<br><br>
 
         This is pure crypto chaos: high risk, high reward, zero safety net.<br>
         You enter on your own terms. You exit on your own terms.<br><br>
 
-        We promise nothing — except a level playing field and a locked battlefield.<br>
+        We promise nothing - except a level playing field and a locked battlefield.<br>
         The skull doesn’t lie. The skull doesn’t forgive.<br>
         But the skull never cheats.<br><br>
 
         Fair launch incoming. Be ready.<br>
-        HAZARD — 100% community. 0% bullshit.
+        HAZARD - 100% community. 0% bullshit.
       </div>
     </div>
 
