--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
     <!-- MAIN TEXT – hart, aber fair -->
     <div class="text-frame teaser-frame">
       <div class="frame-content">
-        $HAZARD is forged in darkness - a 100% fair-launched Solana memecoin.<br>
-        No presale. No team tokens. No insiders. Liquidity burned at launch.<br><br>
+        $HAZARD is forged in darkness - a 100% fair-launched<br> 
+        Solana memecoin.<br>
+        No presale. No team tokens. No insiders.<br> 
+        Liquidity burned at launch.<br><br>
 
         This is pure crypto chaos: high risk, high reward, zero safety net.<br>
         You enter on your own terms. You exit on your own terms.<br><br>
 
-        We promise nothing - except a level playing field and a locked battlefield.<br>
+        We promise nothing - except a level playing field<br> 
+        and a locked battlefield.<br>
         The skull doesn’t lie. The skull doesn’t forgive.<br>
         But the skull never cheats.<br><br>
 
