--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         But the skull never cheats.<br><br>
 
         Fair launch incoming. Be ready.<br>
-        HAZARD - 100% community. 0% bullshit.
+        $HAZARD - 100% community. 0% bullshit.
       </div>
     </div>
 
