--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
   <div class="hero">
     <img src="images/skull_a.png" alt="HAZZARD Skull" class="hero-skull">
     <h1>HAZARD</h1>
-
+<!-- FAIR LAUNCH BADGE -->
+<div class="fair-badge">
+  <span class="badge-icon">✅</span>
+  <strong>FAIR LAUNCH ON PUMP.FUN</strong>
+  <br>
+  <small>No presale • No team tokens • Liquidity auto-burned • Ownership renounced</small>
+</div>
     <!-- 100 % ANTI-RUG BADGE -->
     <div class="fair-badge">
       <strong>FAIR LAUNCH ON PUMP.FUN</strong><br>
