--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <div class="stats-grid">
         <div class="stat-item">
           <span class="stat-label">Contract Address</span>
-          <span class="stat-value">in Arbeit</span>
+          <span class="stat-value">In progress</span>
         </div>
         <div class="stat-item">
           <span class="stat-label">Launch</span>
-          <span class="stat-value">Morgen 19:00 MEZ</span>
+          <span class="stat-value">Morning 19:00 MEZ</span>
         </div>
         <div class="stat-item">
           <span class="stat-label">Holders Target</span>
@@ -69,7 +69,7 @@
     <div class="ca-container">
       <div class="ca-box coming-soon">
         <p class="ca-label">Contract Address</p>
-        <p style="font-size:20px; color:var(--gold); margin:10px 0;">in Arbeit</p>
+        <p style="font-size:20px; color:var(--gold); margin:10px 0;">In progress</p>
         <small>Pump.fun fair launch • Auto-burned LP • Renounced</small>
       </div>
     </div>
