--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="stat-item">
           <span class="stat-label">Launch</span>
-          <span class="stat-value">Morning 19:00 MEZ</span>
+          <span class="stat-value">19:00 MEZ</span>
         </div>
         <div class="stat-item">
           <span class="stat-label">Holders Target</span>
@@ -80,7 +80,7 @@
         <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
         </svg>
-        LAUNCH MORNING 19:00 MEZ
+        LAUNCH 19:00 MEZ
       </div>
       <p class="buy-info">Get ready on Pump.fun → first come, first served</p>
     </div>
