--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HAZARD - Powered by the Dark Power on Solana</title>
-
   <!-- FAVICONS -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -12,7 +11,6 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="theme-color" content="#000000">
-
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,17 +18,16 @@
   <div class="hero">
     <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull">
     <h1>HAZARD</h1>
-
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
 
-    <!-- STATS BLOCK – ohne Countdown, stattdessen "in Arbeit" -->
+    <!-- STATS BLOCK -->
     <div class="stats-container">
       <div class="stats-grid">
         <div class="stat-item">
           <span class="stat-label">Contract Address</span>
-          <span class="stat-value">In progress</span>
+          <span class="stat-value">2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump</span>
         </div>
         <div class="stat-item">
           <span class="stat-label">Launch</span>
@@ -65,34 +62,40 @@
       </div>
     </div>
 
-    <!-- CONTRACT ADDRESS – in Arbeit Version -->
+    <!-- CONTRACT ADDRESS -->
     <div class="ca-container">
-      <div class="ca-box coming-soon">
+      <div class="ca-box">
         <p class="ca-label">Contract Address</p>
-        <p style="font-size:20px; color:var(--gold); margin:10px 0;">In progress</p>
+        <p style="font-size:20px; color:var(--gold); margin:10px 0; word-break:break-all;">
+          2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump
+        </p>
         <small>Pump.fun fair launch • Auto-burned LP • Renounced</small>
       </div>
     </div>
 
-    <!-- BUY BUTTON – deaktiviert bis Launch -->
+    <!-- BUY BUTTON -->
     <div class="buy-container">
-      <div class="buy-btn disabled">
+      <a href="https://pump.fun/2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump" target="_blank" class="buy-btn">
         <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
         </svg>
-        LAUNCH 19:00 MEZ
-      </div>
-      <p class="buy-info">Get ready on Pump.fun → first come, first served</p>
+        BUY ON PUMP.FUN
+      </a>
+      <p class="buy-info">First come, first served</p>
     </div>
 
     <!-- SOCIALS -->
     <div class="links-container">
       <a href="https://x.com/hazard_solana" target="_blank" class="link-box">
-        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+          <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+        </svg>
         <span>X / Twitter</span>
       </a>
       <a href="https://t.me/hazardcoinofficial" target="_blank" class="link-box">
-        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 9.73l-1.42 6.696c-.104.487-.375.607-.775.378l-2.16-1.59-1.04.998c-.115.112-.21.205-.43.205l.155-2.188 4.004-3.835c.174-.157-.038-.244-.27-.087l-4.946 3.116-1.905-.596c-.414-.129-.424-.413.086-.608l7.904-3.043c.348-.13.654.084.65.533z"/></svg>
+        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+          <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 9.73l-1.42 6.696c-.104.487-.375.607-.775.378l-2.16-1.59-1.04.998c-.115.112-.21.205-.43.205l.155-2.188 4.004-3.835c.174-.157-.038-.244-.27-.087l-4.946 3.116-1.905-.596c-.414-.129-.424-.413.086-.608l7.904-3.043c.348-.13.654.084.65.533z"/>
+        </svg>
         <span>Telegram</span>
       </a>
       <a href="https://www.facebook.com/profile.php?id=DEINE_ID" target="_blank" class="link-box">
@@ -107,7 +110,6 @@
   <footer>
     <span>Not financial advice — © 2025 HAZARD</span>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
