--- a/index.html
+++ b/index.html
@@ -21,33 +21,6 @@
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
-
-    <!-- STATS BLOCK -->
-    <div class="stats-container">
-      <div class="stats-grid">
-        <div class="stat-item">
-          <span class="stat-label">Contract Address</span>
-          <span class="stat-value">2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Launch</span>
-          <span class="stat-value">19:00 MEZ</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Holders Target</span>
-          <span class="stat-value">10k+</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Volume Target</span>
-          <span class="stat-value">$5M+</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Market Cap Target</span>
-          <span class="stat-value">$42M+</span>
-        </div>
-      </div>
-    </div>
-
     <div class="text-frame teaser-frame">
       <div class="frame-content">
         $HAZARD is forged in darkness — a 100% fair-launched Solana memecoin.<br>
@@ -61,55 +34,16 @@
         HAZARD — 100% community. 0% bullshit.
       </div>
     </div>
-
-    <!-- CONTRACT ADDRESS -->
+    <!-- CONTRACT ADDRESS – in Arbeit Version -->
     <div class="ca-container">
-      <div class="ca-box">
+      <div class="ca-box coming-soon">
         <p class="ca-label">Contract Address</p>
-        <p style="font-size:20px; color:var(--gold); margin:10px 0; word-break:break-all;">
-          2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump
-        </p>
+        <p style="font-size:20px; color:var(--gold); margin:10px 0;">In progress</p>
         <small>Pump.fun fair launch • Auto-burned LP • Renounced</small>
       </div>
     </div>
-
-    <!-- BUY BUTTON -->
+    <!-- BUY BUTTON – deaktiviert bis Launch -->
     <div class="buy-container">
-      <a href="https://pump.fun/2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump" target="_blank" class="buy-btn">
+      <div class="buy-btn disabled">
         <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
-          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
-        </svg>
-        BUY ON PUMP.FUN
-      </a>
-      <p class="buy-info">First come, first served</p>
-    </div>
-
-    <!-- SOCIALS -->
-    <div class="links-container">
-      <a href="https://x.com/hazard_solana" target="_blank" class="link-box">
-        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-          <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
-        </svg>
-        <span>X / Twitter</span>
-      </a>
-      <a href="https://t.me/hazardcoinofficial" target="_blank" class="link-box">
-        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-          <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 9.73l-1.42 6.696c-.104.487-.375.607-.775.378l-2.16-1.59-1.04.998c-.115.112-.21.205-.43.205l.155-2.188 4.004-3.835c.174-.157-.038-.244-.27-.087l-4.946 3.116-1.905-.596c-.414-.129-.424-.413.086-.608l7.904-3.043c.348-.13.654.084.65.533z"/>
-        </svg>
-        <span>Telegram</span>
-      </a>
-      <a href="https://www.facebook.com/profile.php?id=DEINE_ID" target="_blank" class="link-box">
-        <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
-          <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-        </svg>
-        <span>Facebook</span>
-      </a>
-    </div>
-  </div>
-
-  <footer>
-    <span>Not financial advice — © 2025 HAZARD</span>
-  </footer>
-  <script src="script.js"></script>
-</body>
-</html>
+          <path d="M12 2C6.48 2
