--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>HAZARD - Powered by the Dark Power on Solana</title>
-
-  <!-- FAVICONS -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="shortcut icon" href="/favicon.ico">
   <meta name="theme-color" content="#000000">
-
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,35 +17,8 @@
   <div class="hero">
     <img src="images/skull_a.png" alt="HAZARD Skull" class="hero-skull">
     <h1>HAZARD</h1>
-
     <div class="text-frame">
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
-    </div>
-
-    <!-- STATS BLOCK – ohne Countdown, stattdessen "in Arbeit" -->
-    <div class="stats-container">
-      <div class="stats-grid">
-        <div class="stat-item">
-          <span class="stat-label">Contract Address</span>
-          <span class="stat-value">In progress</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Launch</span>
-          <span class="stat-value">19:00 MEZ</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Holders Target</span>
-          <span class="stat-value">10k+</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Volume Target</span>
-          <span class="stat-value">$5M+</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-label">Market Cap Target</span>
-          <span class="stat-value">$42M+</span>
-        </div>
-      </div>
     </div>
 
     <div class="text-frame teaser-frame">
@@ -65,16 +35,18 @@
       </div>
     </div>
 
-    <!-- CONTRACT ADDRESS – in Arbeit Version -->
+    <!-- CONTRACT ADDRESS – jetzt mit echter CA -->
     <div class="ca-container">
-      <div class="ca-box coming-soon">
+      <div class="ca-box">
         <p class="ca-label">Contract Address</p>
-        <p style="font-size:20px; color:var(--gold); margin:10px 0;">In progress</p>
+        <p style="font-size:20px; color:var(--gold); margin:10px 0; word-break:break-all;">
+          2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump
+        </p>
         <small>Pump.fun fair launch • Auto-burned LP • Renounced</small>
       </div>
     </div>
 
-    <!-- BUY BUTTON – deaktiviert bis Launch -->
+    <!-- BUY BUTTON – noch deaktiviert -->
     <div class="buy-container">
       <div class="buy-btn disabled">
         <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
@@ -107,7 +79,6 @@
   <footer>
     <span>Not financial advice — © 2025 HAZARD</span>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
