--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
       <div class="frame-content subtitle">Powered by the Dark Power on Solana</div>
     </div>
 
+    <!-- STATS BLOCK – wieder drin -->
+    <div class="stats-container">
+      <div class="stats-grid">
+        <div class="stat-item">
+          <span class="stat-label">Contract Address</span>
+          <span class="stat-value">2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Holders Target</span>
+          <span class="stat-value">10k+</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Volume Target</span>
+          <span class="stat-value">$5M+</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-label">Market Cap Target</span>
+          <span class="stat-value">$42M+</span>
+        </div>
+      </div>
+    </div>
+
     <div class="text-frame teaser-frame">
       <div class="frame-content">
         $HAZARD is forged in darkness — a 100% fair-launched Solana memecoin.<br>
@@ -30,12 +52,11 @@
         We promise nothing — except a level playing field and a locked battlefield.<br>
         The skull doesn’t lie. The skull doesn’t forgive.<br>
         But the skull never cheats.<br><br>
-        Fair launch incoming. Be ready.<br>
         HAZARD — 100% community. 0% bullshit.
       </div>
     </div>
 
-    <!-- CONTRACT ADDRESS – jetzt mit echter CA -->
+    <!-- CONTRACT ADDRESS (groß) -->
     <div class="ca-container">
       <div class="ca-box">
         <p class="ca-label">Contract Address</p>
@@ -46,15 +67,15 @@
       </div>
     </div>
 
-    <!-- BUY BUTTON – noch deaktiviert -->
+    <!-- BUY BUTTON – AKTIV -->
     <div class="buy-container">
-      <div class="buy-btn disabled">
+      <a href="https://pump.fun/2GowzeaqsZsiindBjteBQxbK9Tyenf4s9vUHGW1wpump" target="_blank" class="buy-btn">
         <svg viewBox="0 0 24 24" width="28" height="28" fill="currentColor">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
         </svg>
-        LAUNCH 19:00 MEZ
-      </div>
-      <p class="buy-info">Get ready on Pump.fun → first come, first served</p>
+        BUY ON PUMP.FUN
+      </a>
+      <p class="buy-info">First come, first served</p>
     </div>
 
     <!-- SOCIALS -->
